--- a/CONNECT2/pom.xml
+++ b/CONNECT2/pom.xml
@@ -83,7 +83,13 @@
 			<version>2.20.0</version>
 		</dependency>
 
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+
+    </dependencies>
 
 	<build>
 		<plugins>
